<resources>
    <string name="app_name">gb-android-client</string>
    <string name="title_tools">Tools</string>
    <string name="title_shipments">Shipments</string>
    <string name="title_warehouse">Warehouse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launch_calc">Calculate the price</string>
    <string name="calc_title">Рассчитайте стоимость:</string>
    <string name="calc_height">Высота (м)</string>
    <string name="calc_lenght">Длина (м)</string>
    <string name="calc_button">Рассчитать</string>
</resources>
